--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Summer Sale</title>
-</head>
-<body>
-    
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-white">
+    <!-- Header -->
+    <header class="bg-[#F9F6E2] text-black">
+      <div class="flex justify-around items-center">
+          <!-- Header Description -->
+          <div class="text-center">
+            <p class="text-3xl">---SALE FEVER---</p>
+            <h1 class="text-3xl font-bold my-4">Purchase TK 200 or above & get <span class="text-[#E527B2]">20% off</span></h1>
+            <div>
+                <span class="text-3xl mr-3">Use Promo Code</span>
+                <button class="bg-[#E527B2] text-white px-7 py-3 font-semibold rounded-lg">SELL200</button>
+            </div>
+          </div>
+          <!-- Header Image -->
+          <div>
+            <img src="images/Summer 1.png" alt="">
+          </div>
+      </div>
+    </header>
+  </body>
 </html>
