--- a/index.html
+++ b/index.html
@@ -10,25 +10,244 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script
+      src="https://kit.fontawesome.com/c5aab0adaf.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="bg-white">
     <!-- Header -->
     <header class="bg-[#F9F6E2] text-black">
       <div class="flex justify-around items-center">
-          <!-- Header Description -->
-          <div class="text-center">
-            <p class="text-3xl">---SALE FEVER---</p>
-            <h1 class="text-3xl font-bold my-4">Purchase TK 200 or above & get <span class="text-[#E527B2]">20% off</span></h1>
-            <div>
-                <span class="text-3xl mr-3">Use Promo Code</span>
-                <button class="bg-[#E527B2] text-white px-7 py-3 font-semibold rounded-lg">SELL200</button>
-            </div>
-          </div>
-          <!-- Header Image -->
+        <!-- Header Description -->
+        <div class="text-center">
+          <p class="text-3xl">---SALE FEVER---</p>
+          <h1 class="text-3xl font-bold my-4">
+            Purchase TK 200 or above & get
+            <span class="text-[#E527B2]">20% off</span>
+          </h1>
           <div>
-            <img src="images/Summer 1.png" alt="">
+            <span class="text-3xl mr-3">Use Promo Code</span>
+            <button
+              class="bg-[#E527B2] text-white px-7 py-3 font-semibold rounded-lg"
+            >
+              SELL200
+            </button>
           </div>
+        </div>
+        <!-- Header Image -->
+        <div>
+          <img src="images/Summer 1.png" alt="" />
+        </div>
       </div>
     </header>
+    <!-- Main -->
+    <main>
+      <div class="mt-6 text-black">
+        <!-- Products -->
+        <div>
+          <!-- Kitchen Wear -->
+          <div>
+            <h1 class="text-3xl font-medium mb-6">Kitchen Wear</h1>
+            <div class="grid grid-cols-3">
+              <div class="card w-96 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img
+                    src="images/prod1.png"
+                    alt="Shoes"
+                    class="rounded-xl bg-gray-300 px-20 py-10"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <p>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                  </p>
+                  <h2 class="card-title">K.Accessories</h2>
+                  <p>39.00 Tk</p>
+                </div>
+              </div>
+              <div class="card w-96 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img
+                    src="images/prod2.png"
+                    alt="Shoes"
+                    class="rounded-xl bg-gray-300 px-20 py-10"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <p>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                  </p>
+                  <h2 class="card-title">K.Accessories</h2>
+                  <p>25.00 Tk</p>
+                </div>
+              </div>
+              <div class="card w-96 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img
+                    src="images/prod3.png"
+                    alt="Shoes"
+                    class="rounded-xl bg-gray-300 px-20 py-10"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <p>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                  </p>
+                  <h2 class="card-title">Home Cooker</h2>
+                  <p>49.00 Tk</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Sports Wear -->
+          <div class="my-10">
+            <h1 class="text-3xl font-medium mb-6">Sports Wear</h1>
+            <div class="grid grid-cols-3">
+              <div class="card w-96 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img
+                    src="images/prod4.png"
+                    alt="Shoes"
+                    class="rounded-xl bg-gray-300 px-20 py-10"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <p>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                  </p>
+                  <h2 class="card-title">Sports Black Cap</h2>
+                  <p>49.00 Tk</p>
+                </div>
+              </div>
+              <div class="card w-96 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img
+                    src="images/prod5.png"
+                    alt="Shoes"
+                    class="rounded-xl bg-gray-300 px-20 py-10"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <p>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                  </p>
+                  <h2 class="card-title">Full Jersey Set</h2>
+                  <p>69.00 Tk</p>
+                </div>
+              </div>
+              <div class="card w-96 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img
+                    src="images/prod6.png"
+                    alt="Shoes"
+                    class="rounded-xl bg-gray-300 px-20 py-10"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <p>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                  </p>
+                  <h2 class="card-title">Sports Cates</h2>
+                  <p>169.00 Tk</p>
+                </div>
+              </div>
+            </div>
+            <div></div>
+          </div>
+          <!-- Furniture -->
+          <div>
+            <h1 class="text-3xl font-medium mb-6">Furniture</h1>
+            <div class="grid grid-cols-3">
+              <div class="card w-96 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img
+                    src="images/prod7.png"
+                    alt="Shoes"
+                    class="rounded-xl bg-gray-300 px-20 py-10"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <p>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                  </p>
+                  <h2 class="card-title">Single Relax Chair</h2>
+                  <p>185.00 Tk</p>
+                </div>
+              </div>
+              <div class="card w-96 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img
+                    src="images/prod8.png"
+                    alt="Shoes"
+                    class="rounded-xl bg-gray-300 px-20 py-10"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <p>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                  </p>
+                  <h2 class="card-title">Children Play</h2>
+                  <p>225.00 Tk</p>
+                </div>
+              </div>
+              <div class="card w-96 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img
+                    src="images/prod9.png"
+                    alt="Shoes"
+                    class="rounded-xl bg-gray-300 px-20 py-10"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <p>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                    <i class="fa-solid fa-star text-orange-400"></i>
+                  </p>
+                  <h2 class="card-title">Flexible Sofa</h2>
+                  <p>349.00 Tk</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Cart -->
+      </div>
+    </main>
   </body>
 </html>
