--- a/index.html
+++ b/index.html
@@ -270,7 +270,6 @@
     </main>
 
     <!-- Scripts -->
-    <script src="scripts/utilities.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
